Fix #23 - Removed extra space in adpatable css and applied styles for send message icon.

--- a/style/messages.css
+++ b/style/messages.css
@@ -93,3 +93,11 @@
 [data-region='message-drawer'] [data-region='body-container'] .btn-link:hover {
     color: #fff !important;
 }
+[data-region='message-drawer'] [data-region='content-messages-footer-container'] .btn-link {
+	display: flex;
+    padding: 1px 1px 0 0 !important;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
